# Lieutenant

./: .gitignore  Cargo.toml  Marath.txt  README.md  build.rs  build.sh  output.toml  scratch.sql  settings.toml  settings_default.toml  tasklist.md
artifacts/: scratch.sql  settings.toml  settings_bkp.toml  tasklist.md
src/: db.rs  lib.rs  main.rs  network.rs  omni.pest  test.rs  ui.rs  util.rs
src/db/: mod.rs
src/ui/: mod.rs  util.rs
