[package]
name = "lieutenant"
version = "0.3.0"
authors = ["Endominus <endominus@gmail.com>"]
edition = "2018"

[lib]
name = "lieutenant"
path = "src/lib.rs"

[dependencies]
json = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"
crossterm = "0.19"
structopt = "0.3"
anyhow = "1.0"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]

[dependencies.tui]
version = "0.14"
default-features = false
features = ['crossterm']

# [dependencies.cursive]
# version = "0.13"
# default-features = false
# features = ["crossterm-backend"]
