[package]
name = "lieutenant"
version = "0.7.1"
authors = ["Endominus <endominus@gmail.com>"]
edition = "2018"

[lib]
name = "lieutenant"
path = "src/lib.rs"

[dependencies]
json = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"
crossterm = "0.19"
structopt = "0.3"
anyhow = "1.0"
config = "0.11.0"
lazy_static = "1.4.0"
regex = "1.4.5"
peg = "0.6.3"
itertools = "0.10.0"
csv = "1.1.6"
# futures = { version = "0.3.*" }
# tokio = {version = "1.4.*", features = ["full"] }

[dependencies.rusqlite]
version = "0.25"
features = ["bundled", "functions"]

[dependencies.tui]
version = "0.14"
default-features = false
features = ['crossterm']

[dependencies.self_update]
version = "0.26.0"
features = ['archive-tar', 'archive-zip', 'compression-flate2', 'compression-zip-deflate']