[package]
name = "lieutenant"
version = "1.0.3"
authors = ["Endominus <endominus@gmail.com>"]
edition = "2018"

# [lib]
# name = "lieutenant"
# path = "src/lib.rs"

[dependencies]
json = "0.12"
tokio = "1.28.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
clap = "3.0"
crossterm = "0.22"
structopt = "0.3"
anyhow = "1.0"
config = "0.11.0"
lazy_static = "1.4.0"
regex = "1.4.5"
itertools = "0.10.0"
csv = "1.1.6"
chrono = "0.4.19"
pest = "2.1.3"
pest_derive = "2.1.0"
tui = "0.17.0"

[dependencies.rusqlite]
version = "0.28"
features = ["bundled", "functions"]

[dependencies.self_update]
version = "0.28.0"
features = ['archive-tar', 'archive-zip', 'compression-flate2', 'compression-zip-deflate']
